now gets cookie had to upgrade to Java 11 to get HTTP2 with the HttpRequest system TODO: see how to switch to HTTPS